--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         <div class="divider"></div>
         <div class="feed">
           <div class="section-title Title2">動態</div>
+          <div class="see-more-button Body2">看更多</div>
           <div class="content">
             <div class="posts">
               <div class="post post1"></div>
