--- a/index.html
+++ b/index.html
@@ -44,33 +44,23 @@
       <div class="profile-content">
         <div class="about-me">
           <div class="section-title Title2">簡介</div>
+          <div class="expand-button Body2">
+            <span>展開</span>
+            <img src="img/icon_chevron_down_s.svg" alt="">
+          </div>
           <div class="content Body2">
-            <!-- <br />養了一隻吉娃娃 <br />奶茶控每天都想喝一杯
-            <br />有點小潔癖的處女座
-            <br />
-            <br />臉書↓↓↓↓
-            <br /> -->
-            <br />https://is.gd/oQjX6V <br />IG: unaaa__0830
-            <br />
-            <br />記得追蹤follow <br />夠愛我就能走到我身邊
-            <br />你對我好..我也對你更好 <br />只要相信，就會實現
-            <br />就讓我們在初樂相遇 <br />一起實現夢想帶給更多人快樂吧
-            <!-- <br />養了一隻吉娃娃 <br />奶茶控每天都想喝一杯
-            <br />有點小潔癖的處女座
-            <br />
-            <br />臉書↓↓↓↓
-            <br />０
-            <br />https://is.gd/oQjX6V <br />IG: unaaa__0830
-            <br />
-            <br />記得追蹤follow <br />夠愛我就能走到我身邊
-            <br />你對我好..我也對你更好 <br />只要相信，就會實現
-            <br />就讓我們在初樂相遇 <br />一起實現夢想帶給更多人快樂吧 -->
+記得追蹤follow <br />夠愛我就能走到我身邊
+            <br />你對我好..我也對你更好 
+
           </div>
         </div>
         <div class="divider"></div>
         <div class="feed">
           <div class="section-title Title2">動態</div>
-          <div class="see-more-button Body2">看更多</div>
+          <div class="see-more-button Body2">
+            <span>看更多</span>
+            <img src="img/icon_chevron_right_s.svg" alt="">
+          </div>
           <div class="content">
             <div class="posts">
               <div class="post post1"></div>
